query-ui/ui-current/query.css
/* document editor --------------------------------------------------------- */
.doc-editor {
  margin-bottom: -50px;
}
.doc-editor .controls {
  display: flex;
  align-items: flex-end;
  justify-content: flex-start;
  flex-wrap: wrap;
  margin: 0 0 1.5rem 0;
  font-size: .875rem;
}
.doc-editor .controls .column {
  margin-right: .5rem;
  white-space: nowrap;
  min-width: 0;
  margin-top: .25rem;
}
.controls .column button {
  margin-top: .25rem;
}
.doc-editor .controls .column:last-child {
  margin-right: 0;
}
.doc-editor .controls label {
  font-size: .875rem;
}
.doc-editor .ui-select-container.single {
  margin-bottom: -2px!important;
}
.doc-editor .cbui-select .selectize-input {
  line-height: 2.1;
}
.doc-editor-results {
  overflow: auto;
  height: calc(100vh - 226px);
  width: 100%;
}

/* div around the datatable needs absolute or relative positioning and fixed height for scrolling to work
 * absolute positioning doesn't allow it to stretch/expand after it's parent
 */
.data-table-parent {
  position: relative;
  height: calc(100vh - 360px); /* must be same height as wb-results-wrapper in cbui-components.css */
}

.doc-editor-fieldset {
    padding: 0;
    border: 0;
    border-radius: 0;
    margin-bottom: 0;
}
.doc-editor-row {
  white-space: nowrap;
  display: inline-block;
  padding: .25rem 0;
  vertical-align: top;
}
.doc-editor-cell {
  display: inline-block;
  overflow: hidden;
  overflow-wrap: break-word;
  vertical-align: top;
  white-space: normal;
  font-size: .875rem;
  padding: 0 1rem 0 .25rem;
}
input.ng-invalid-number {
  background-color: #f9e9ea; /* red-7 */
}
textarea.ng-invalid-number {
  background-color: #f9e9ea; /* red-7 */
}

/* small square buttons for the document editor ---------------------------- */
.btn.square-button {
  min-width: 1rem;
  padding: .5rem;
  margin-right: .25rem;
  border-radius: 4px;
}
.btn.square-button[disabled] {
  background-color: #d3ccd3;
}
.square-button .icon {
  vertical-align: top;
  color: #fff;
  font-size: inherit;
}

/* shadows to indicate more content if you scroll  ------------------------- */
.scroll-shadow-horizontal {
  box-shadow: -8px 0px 8px -6px rgba(33,33,33,0.5);
  position: absolute;
  top: -2px;
  right: -32px;
  width: 32px;
  height: 100%;
  z-index: 100;
  background-color: #fff;
}
.scroll-shadow-bottom {
  position: relative;
  z-index: 2;
  box-shadow: 0px -10px 10px -10px #000 inset;
  height: 20px;
  margin-top: -20px;
  margin-right: 5px;
}

/* force visible scrollbars   ---------------------------------------------- */
.show-scrollbar::-webkit-scrollbar {
  width: 10px; /* force scrollbars to appear with this size */
  height: 10px;

}
.show-scrollbar::-webkit-scrollbar-track { /* force track to appear*/
  background-color: #f5f5f5;
  border-radius: 6px;
  -webkit-border-radius: 6px;
}
.show-scrollbar::-webkit-scrollbar-thumb { /* force thumb to appear */
  -webkit-border-radius: 6px;
  border-radius: 6px;
  background-color: #ececec;
  -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.15);
}

/* the scrollbar in the schema display needs to be nudged over a bit */
.narrow-scrollbar::-webkit-scrollbar {
  width: 7px; /* force scrollbars to appear with this size */
  height: 7px;

}
.narrow-scrollbar::-webkit-scrollbar-track { /* force track to appear*/
  background-color: #f5f5f5;
  border-radius: 6px;
  -webkit-border-radius: 6px;
}
.narrow-scrollbar::-webkit-scrollbar-thumb {
  -webkit-border-radius: 6px;
  border-radius: 6px;
  background-color: #ececec;
  -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.15);
}

.small-button {
  min-width: 1rem;
  padding: 0 0.5rem;
}

.wb-refresh-btn {
  margin: .5rem .75rem;
}
/* query monitoring tables ------------------------------------------------- */
.qm-table-active .cbui-table-header,
.qm-table-completed .cbui-table-header,
.qm-table-prepared .cbui-table-header {
  cursor: pointer;
}

/* edit history dialog list of queries ------------------------------------- */
.history-list {
  height: 96%;
  overflow: scroll;
}

/* styles for D3-based query explain plan ---------------------------------- */
.wb-explain-summary {
  font-size: .75rem;
  padding: .25rem 1rem;
}
.wb-explain-summary .column {
  flex-grow: 1;
  margin: 0 1.5rem 0 0;
  padding: 0;
  overflow: hidden; /* MB-56014 - don't let explain summary expand indefinitely */
  max-width: 25%;
  text-overflow: ellipsis;
  cursor: pointer;
}
.wb-explain-summary .column:last-child {
  flex-grow: .5;
  margin-right: 0;
}
.wb-explain-d3-wrapper, .wb-results-chart {
  width: 100%;
  height: 100%;
  position: relative;
  font-family: OpenSans;
}
.wb-explain-node {
  cursor: pointer;
  fill: #bfe2ba;
}
.wb-explain-node text {
  pointer-events: none;
}
.wb-explain-node-expensive-3 {
  fill: #fdedd3;
}
.wb-explain-node-expensive-2 {
  fill: #fbdba7;
}
.wb-explain-node-expensive-1 {
  fill: #f9ca7b;
}
.wb-explain-node:hover,
.wb-explain-node-expensive-1:hover,
.wb-explain-node-expensive-2:hover,
.wb-explain-node-expensive-3:hover {
  cursor: hand;
  fill: #b3cfef;
}
.wb-explain-node-text {
  font-size: 11px;
  font-weight: 600;
  fill: #000;
  fill-opacity: 1;
  text-anchor: middle;
}
.wb-explain-node-text-details {
  font-size: 9px;
  fill: #000;
  fill-opacity: 1;
  text-anchor: middle;
}
.wb-explain-link {
  fill: none;
  stroke: #979797;
  stroke-width: 1px;
}
.wb-clone-link { /* analytics plans can have duplicate edges "clones" which need to be hidden */
  fill: none;
  stroke-width: 0px;
}
marker {
  fill: #333;
}
.wb-explain-plan-zoom {
  color: #a1a1a1;
  padding: .35rem .5rem;
  cursor: pointer;
  border: 1px solid transparent;
  border-radius: 2px;
  font-size: 18px;
}
.wb-explain-plan-zoom:hover {
  color: #000;
  border: 1px solid #a1a1a1;
}
.wb-explain-plan-zoom:active {
  color: #000;
  border: 1px solid #333;
}

.wb-explain-plan-orient {
  display: inline-block;
  color: #a1a1a1;
  padding: .35rem .5rem;
  cursor: pointer;
  border: 1px solid transparent;
  border-radius: 2px;
  font-size: 18px;
}
.wb-explain-plan-orient:hover {
  color: #000;
  border: 1px solid #a1a1a1;
}
.wb-explain-plan-orient:active {
  color: #000;
  border: 1px solid #333;
}
.wb-explain-plan-selected-orient {
  color: #000 !important;
}

/* special tooltips for the explain plan ----------------------------------- */
.wb-explain-tooltip {
  position: absolute;
  font-size: .75rem;
  cursor: pointer;
  padding: .5rem .75rem;
  color: #333;
  background-color: #fff;
  border-radius: 3px;
  border-top: solid .25rem #4287d6;
  box-shadow: 0px 5px 14px 2px rgba(0,0,0,0.14);
  min-width: 200px;
  z-index: 10;
}
.wb-explain-tooltip h5 {
  margin-right: 1rem;
}
ul.wb-explain-tooltip-list {
  padding: 0;
  margin: .25rem 0 .5rem 0;
}
ul.wb-explain-tooltip-list li {
  list-style-type: none;
  padding: 0;
  margin: 0;
  font-size: .75rem;
}
ul.wb-explain-tooltip-list li ul li {
  list-style-type: circle!important;
  padding: 0;
  margin: 0;
  font-size: .75rem;
}

.index-header {
  font-style: italic;
}

.break-word {
  word-break: break-word;
}

.wb-normal-results {
  height: 100%;
}

/* need to be able to override parent style for warning icon */
.force-orange-3 {
  color: #f9ca7b !important;
}

